ROM KPI test WIP
To be cleaned up.

Signed-off-by: Kyra Lengfeld <kyra.lengfeld@nordicsemi.no>

--- a/.github/test-spec.yml
+++ b/.github/test-spec.yml
@@ -220,6 +220,7 @@
   - "subsys/mpsl/**/*"
   - "subsys/nrf_security/**/*"
   - "drivers/mpsl/**/*"
+  - "tests/rom_kpi/*"
 
 "CI-ble-samples-test":
   - "samples/bluetooth/central_and_peripheral_hr/*"
